Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "HLV Kim Sang-sik họp báo trước trận gặp Lào",
+    "content": "HLV Kim Sang-sik đã họp báo trước trận đấu giữa Việt Nam và Lào trong khuôn khổ vòng loại cuối Asian Cup 2027. Ông đánh giá cao đội bóng Việt Nam và nhấn mạnh sự chênh lệch trình độ giữa hai đội, với Việt Nam xếp thứ 114 còn Lào thứ 186 trên bảng FIFA. Dù Việt Nam thiếu một số cầu thủ do chấn thương, nhưng đội vẫn tự tin sau chiến thắng 2-0 trước Campuchia. Trận đấu sẽ diễn ra vào lúc 19h30 ngày mai tại sân Gò Đậu, Bình Dương.",
+    "link": "https://vnexpress.net/hlv-kim-sang-sik-hop-bao-truoc-tran-gap-lao-4865287.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "HLV Kim Sang-sik đã nói gì trước trận gặp Lào?",
+    "answers": [
+      {
+        "text": "Ông đánh giá cao đội bóng Việt Nam và sự chênh lệch trình độ giữa Việt Nam và Lào.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Lào là một đội bóng mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Ông không đề cập đến đối thủ Lào.",
+        "correct": false
+      },
+      {
+        "text": "Ông cho biết đội bóng Việt Nam sẽ thua trận.",
+        "correct": false
+      },
+      {
+        "text": "Ông không có ý kiến gì trước trận đấu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những cái bẫy thành công",
     "content": "Bài viết của tiến sĩ Dimitrios Tsatiris nhấn mạnh rằng thành công không đồng nghĩa với hạnh phúc và thường đi kèm với nhiều thách thức. Nhiều người lý tưởng hóa thành công mà không nhận ra giá trị của hành trình và cái giá phải trả cho những thành tựu đó. Ông khuyến khích mọi người cần có một mối quan hệ lành mạnh với thành công và biết cách cân bằng giữa tham vọng với sức khỏe và các mối quan hệ cá nhân. Bài viết đưa ra 5 cách để đạt được điều đó, bao gồm giữ sự cân bằng, điều chỉnh kỳ vọng và trân trọng hiện tại.",
     "link": "https://vnexpress.net/nhung-cai-bay-thanh-cong-4865102.html",
@@ -520,6 +551,33 @@
       },
       {
         "text": "Do sự chuyển công tác của một lãnh đạo khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người đàn ông trong vụ tai nạn ôtô ở TP Pleiku đã tử vong",
+    "content": "Ông Đoàn Long Giang, 45 tuổi, đã tử vong sau khi nhập viện với chấn thương sọ não do tai nạn ô tô tại TP Pleiku. Vụ tai nạn xảy ra khi ô tô của ông Giang lao lên vỉa hè, tông gãy biển báo và cây xanh. Hai hành khách trên xe cũng bị thương nặng, trong khi tài xế Nguyễn Quang Trung không bị thương nặng nhưng có nồng độ cồn vượt mức quy định.",
+    "link": "https://vnexpress.net/nguoi-dan-ong-trong-vu-tai-nan-oto-o-tp-pleiku-da-tu-vong-4865196.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Nguyên nhân cái chết của ông Đoàn Long Giang là gì?",
+    "answers": [
+      {
+        "text": "Chấn thương sọ não do tai nạn xe hơi.",
+        "correct": true
+      },
+      {
+        "text": "Tai nạn giao thông không liên quan.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh lý mãn tính trước đó.",
+        "correct": false
+      },
+      {
+        "text": "Cú ngã từ trên cao.",
         "correct": false
       }
     ]
@@ -2144,33 +2202,6 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -2202,28 +2233,28 @@
     ]
   },
   {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 9,
     "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
     "answers": [
       {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
         "correct": true
       },
       {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
         "correct": false
       },
       {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
         "correct": false
       },
       {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
         "correct": false
       }
     ]
@@ -2251,6 +2282,33 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "answers": [
+      {
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "correct": true
+      },
+      {
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "correct": false
+      },
+      {
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -3388,6 +3446,33 @@
     ]
   },
   {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -3414,33 +3499,6 @@
       },
       {
         "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -4322,33 +4380,6 @@
       },
       {
         "text": "Thịt bò, lá lốt, mộc nhĩ, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bạn gái cầu thủ Ronaldo khoe dáng nóng bỏng ở Tuần lễ Thời trang Paris",
-    "content": "Georgina Rodríguez, bạn gái của siêu sao Cristiano Ronaldo, đã gây ấn tượng mạnh tại Tuần lễ Thời trang Paris 2025 với phong cách thời trang nổi bật và quyến rũ. Cô không chỉ là khách mời tại các show diễn của những thương hiệu lớn như Moncler, Elie Saab và Valentino mà còn được mời làm người mẫu trình diễn bộ sưu tập mới của Moncler. Vẻ đẹp và gu thời trang của Georgina đã giúp cô khẳng định vị thế riêng trong làng thời trang, đồng thời cho thấy mối quan hệ bền chặt với Ronaldo sau gần 9 năm bên nhau.",
-    "link": "https://dantri.com.vn/giai-tri/ban-gai-cau-thu-ronaldo-khoe-dang-nong-bong-o-tuan-le-thoi-trang-paris-20250321120211708.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Georgina Rodríguez đã làm gì tại Tuần lễ Thời trang Paris 2025?",
-    "answers": [
-      {
-        "text": "Cô ấy đã trình diễn bộ sưu tập mới của Moncler.",
-        "correct": true
-      },
-      {
-        "text": "Cô ấy đã tham gia một buổi tiệc.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy đã tổ chức một buổi họp báo.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy đã tham gia một cuộc thi thời trang.",
         "correct": false
       }
     ]
