Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -143,6 +143,37 @@
     ]
   },
   {
+    "title": "The Global City - điểm đến của những sự kiện tầm cỡ quốc tế",
+    "content": "The Global City đã trở thành điểm đến nổi bật cho các sự kiện văn hóa và nghệ thuật quy mô lớn, thu hút gần 200.000 lượt khán giả trong tháng 3 với hai đêm nhạc hội lớn. Đây là không gian đô thị kết hợp giữa nghệ thuật và văn hóa, tạo ra những trải nghiệm độc đáo cho cư dân và du khách. Với nhiều tiện ích hiện đại và vị trí thuận lợi, The Global City hứa hẹn sẽ là trung tâm giải trí phồn thịnh tại TP.HCM.",
+    "link": "https://dantri.com.vn/giai-tri/the-global-city-diem-den-cua-nhung-su-kien-tam-co-quoc-te-20250324143317328.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "The Global City đã thu hút bao nhiêu lượt khán giả trong tháng 3 với các sự kiện văn hóa?",
+    "answers": [
+      {
+        "text": "Gần 200.000 lượt",
+        "correct": true
+      },
+      {
+        "text": "Hơn 100.000 lượt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ 50.000 lượt",
+        "correct": false
+      },
+      {
+        "text": "300.000 lượt",
+        "correct": false
+      },
+      {
+        "text": "Dưới 30.000 lượt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những cái bẫy thành công",
     "content": "Bài viết của tiến sĩ Dimitrios Tsatiris nhấn mạnh rằng thành công không đồng nghĩa với hạnh phúc và thường đi kèm với nhiều thách thức. Nhiều người lý tưởng hóa thành công mà không nhận ra giá trị của hành trình và cái giá phải trả cho những thành tựu đó. Ông khuyến khích mọi người cần có một mối quan hệ lành mạnh với thành công và biết cách cân bằng giữa tham vọng với sức khỏe và các mối quan hệ cá nhân. Bài viết đưa ra 5 cách để đạt được điều đó, bao gồm giữ sự cân bằng, điều chỉnh kỳ vọng và trân trọng hiện tại.",
     "link": "https://vnexpress.net/nhung-cai-bay-thanh-cong-4865102.html",
@@ -1843,60 +1874,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống nước kiềm có phòng ngừa ung thư?",
     "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
     "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
@@ -1919,6 +1896,33 @@
       },
       {
         "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -1950,6 +1954,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
         "correct": false
       }
     ]
@@ -2206,33 +2237,6 @@
     ]
   },
   {
-    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
-    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
-    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
-    "answers": [
-      {
-        "text": "Giữa tháng 3",
-        "correct": true
-      },
-      {
-        "text": "Đầu tháng 4",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 2",
-        "correct": false
-      },
-      {
-        "text": "Giữa tháng 1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 hiểu lầm thường gặp về đường",
     "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
     "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
@@ -2255,6 +2259,33 @@
       },
       {
         "text": "Chỉ ăn đường một lần trong ngày là an toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
         "correct": false
       }
     ]
@@ -3994,33 +4025,6 @@
       },
       {
         "text": "Tìm hiểu về văn hóa Việt Nam",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chả lá lốt kiểu Hải Phòng",
-    "content": "Chả lá lốt kiểu Hải Phòng là món ăn đặc trưng với lớp vỏ bên ngoài hơi xém và màu xanh đẹp mắt, nhân bên trong gồm thịt xay mềm, ngọt và mộc nhĩ sần sật. Để làm món ăn này, cần chuẩn bị nguyên liệu như thịt vai, lá lốt, mộc nhĩ và gia vị. Sau khi trộn đều và gói lại, chả được chiên hoặc hấp sơ để giữ được độ mềm và hương vị thơm ngon. Món ăn thường được ăn kèm với rau muống luộc và nước mắm chấm tỏi ớt, rất được yêu thích tại Hải Phòng.",
-    "link": "https://vnexpress.net/cha-la-lot-kieu-hai-phong-4864805.html",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chả lá lốt kiểu Hải Phòng được làm từ những nguyên liệu gì?",
-    "answers": [
-      {
-        "text": "Thịt vai, lá lốt, mộc nhĩ, hành khô",
-        "correct": true
-      },
-      {
-        "text": "Gà, lá lốt, mộc nhĩ, hành khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt heo, lá lốt, tôm, hành khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, lá lốt, mộc nhĩ, hành tây",
         "correct": false
       }
     ]
