Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Tuyên án băng nhóm mua bán người đưa sang đặc khu kinh tế Tam giác vàng",
+    "content": "Ngày 24-3, Toà án nhân dân tỉnh Hà Tĩnh đã tuyên án đối với băng nhóm mua bán người, trong đó có Lê Xuân Thành và Lê Anh Tuấn, bị phạt lần lượt 14 và 9 năm tù vì đã lừa gạt hàng chục người Việt Nam đưa sang đặc khu kinh tế Tam giác vàng. Nhóm này đã lạm dụng tín nhiệm chiếm đoạt tài sản từ những nạn nhân muốn trốn khỏi khu vực này. Tổng cộng, 16 người đã bị đưa sang Lào và giao cho chủ người Trung Quốc để làm việc cưỡng bức.",
+    "link": "https://tuoitre.vn/tuyen-an-bang-nhom-mua-ban-nguoi-dua-sang-dac-khu-kinh-te-tam-giac-vang-20250324171429953.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Băng nhóm nào đã bị tuyên án vì mua bán người tại đặc khu kinh tế Tam giác vàng?",
+    "answers": [
+      {
+        "text": "Lê Xuân Thành và Lê Anh Tuấn",
+        "correct": true
+      },
+      {
+        "text": "Bùi Duy Hiếu và Triệu Thanh Tuyền",
+        "correct": false
+      },
+      {
+        "text": "Nhóm người Trung Quốc",
+        "correct": false
+      },
+      {
+        "text": "Nhóm người Lào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Đi Phú Yên đi'",
     "content": "'Đi Phú Yên đi' là thông điệp kích cầu du lịch mà tỉnh Phú Yên triển khai để thu hút du khách trong năm 2025. Tỉnh sẽ tập trung vào thị trường khách du lịch quốc tế và nội địa, với nhiều sản phẩm du lịch mới như tour trải nghiệm thiên nhiên và ẩm thực đặc sắc. Các doanh nghiệp du lịch cũng sẽ cải thiện chất lượng dịch vụ nhằm nâng cao trải nghiệm cho du khách.",
     "link": "https://tuoitre.vn/di-phu-yen-di-20250324153745214.htm",
@@ -2550,28 +2577,28 @@
     ]
   },
   {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 9,
     "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
     "answers": [
       {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
         "correct": true
       },
       {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
         "correct": false
       },
       {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
         "correct": false
       },
       {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
         "correct": false
       }
     ]
@@ -2608,28 +2635,28 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 3,
     "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
     "answers": [
       {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
         "correct": true
       },
       {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
         "correct": false
       },
       {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
         "correct": false
       },
       {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
