Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tuyên án băng nhóm mua bán người đưa sang đặc khu kinh tế Tam giác vàng",
     "content": "Ngày 24-3, Toà án nhân dân tỉnh Hà Tĩnh đã tuyên án đối với băng nhóm mua bán người, trong đó có Lê Xuân Thành và Lê Anh Tuấn, bị phạt lần lượt 14 và 9 năm tù vì đã lừa gạt hàng chục người Việt Nam đưa sang đặc khu kinh tế Tam giác vàng. Nhóm này đã lạm dụng tín nhiệm chiếm đoạt tài sản từ những nạn nhân muốn trốn khỏi khu vực này. Tổng cộng, 16 người đã bị đưa sang Lào và giao cho chủ người Trung Quốc để làm việc cưỡng bức.",
     "link": "https://tuoitre.vn/tuyen-an-bang-nhom-mua-ban-nguoi-dua-sang-dac-khu-kinh-te-tam-giac-vang-20250324171429953.htm",
@@ -1736,33 +1763,6 @@
     ]
   },
   {
-    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
-    "answers": [
-      {
-        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
-        "correct": true
-      },
-      {
-        "text": "Cháo thịt, cơm trắng, bánh mì",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, cá, trứng",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, snack, kẹo",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
     "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
     "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
@@ -1785,6 +1785,33 @@
       },
       {
         "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
+    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
+    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
+    "answers": [
+      {
+        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
+        "correct": true
+      },
+      {
+        "text": "Cháo thịt, cơm trắng, bánh mì",
+        "correct": false
+      },
+      {
+        "text": "Thịt bò, cá, trứng",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, snack, kẹo",
         "correct": false
       }
     ]
